--- a/fitsmeright/Scence/Main/Closet/AddClosetVC/AddClosetVC.storyboard
+++ b/fitsmeright/Scence/Main/Closet/AddClosetVC/AddClosetVC.storyboard
@@ -10,70 +10,114 @@
     </dependencies>
     <scenes>
         <!--Add ClosetVC-->
-        <scene sceneID="1cB-L4-WeB">
+        <scene sceneID="xKz-Nv-fM7">
             <objects>
-                <viewController storyboardIdentifier="AddClosetVC" id="egE-Xm-O6f" customClass="AddClosetVC" customModule="fitsmeright" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="nb6-GA-DuK">
+                <viewController storyboardIdentifier="AddClosetVC" id="U35-Yp-WNJ" customClass="AddClosetVC" customModule="fitsmeright" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="k62-1Q-u2f">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2V-RW-djC" userLabel="TopView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GSa-Tr-N9r" userLabel="TopView">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
                                 <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGG-C5-3Qq">
-                                <rect key="frame" x="183.5" y="333.5" width="8" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Tz2-Fc-Dfw">
-                                <rect key="frame" x="20" y="603" width="335" height="44"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="81b-ae-AwC">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mza-oH-XLd">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="44"/>
-                                        <color key="backgroundColor" red="0.98039215690000003" green="0.44705882349999998" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="42c-4q-MOB"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <state key="normal" title="Add"/>
-                                        <connections>
-                                            <action selector="addClosetPressed:" destination="egE-Xm-O6f" eventType="touchUpInside" id="emv-fM-vFf"/>
-                                        </connections>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gsa-LB-wWa">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="576"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mrj-Ea-6mU">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="mrj-Ea-6mU" secondAttribute="height" multiplier="1:1" id="her-QL-cmW"/>
+                                                </constraints>
+                                            </imageView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C8l-2Q-TpB">
+                                                <rect key="frame" x="0.0" y="375" width="375" height="1"/>
+                                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="c1z-1N-8Uj"/>
+                                                </constraints>
+                                            </view>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Xc7-ww-kUZ">
+                                                <rect key="frame" x="0.0" y="376" width="375" height="200"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="usz-L0-gwr" customClass="ClosetFormView" customModule="fitsmeright" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="50" id="ov3-y7-7aG"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="luY-U5-WgG" customClass="ClosetFormView" customModule="fitsmeright" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="50" width="375" height="50"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qcB-xP-oho" customClass="ClosetFormView" customModule="fitsmeright" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="100" width="375" height="50"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sMS-wA-eN1" customClass="ClosetFormView" customModule="fitsmeright" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="150" width="375" height="50"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </view>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4eO-5c-0aW">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
                                     </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K8Q-Mu-7s5">
+                                        <rect key="frame" x="162.5" y="162.5" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Fex-Dv-l61"/>
+                                            <constraint firstAttribute="width" constant="50" id="q1W-bf-pJn"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
-                            </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4Bu-Do-OPm">
-                                <rect key="frame" x="0.0" y="20" width="375" height="375"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="4Bu-Do-OPm" secondAttribute="height" multiplier="1:1" id="alN-TA-kEV"/>
+                                    <constraint firstItem="gsa-LB-wWa" firstAttribute="leading" secondItem="81b-ae-AwC" secondAttribute="leading" id="008-J8-RFD"/>
+                                    <constraint firstAttribute="bottom" secondItem="gsa-LB-wWa" secondAttribute="bottom" id="3Q3-B7-dAy"/>
+                                    <constraint firstItem="4eO-5c-0aW" firstAttribute="leading" secondItem="mrj-Ea-6mU" secondAttribute="leading" id="7Sd-UF-5ag"/>
+                                    <constraint firstAttribute="trailing" secondItem="gsa-LB-wWa" secondAttribute="trailing" id="87y-84-SeO"/>
+                                    <constraint firstItem="K8Q-Mu-7s5" firstAttribute="centerY" secondItem="mrj-Ea-6mU" secondAttribute="centerY" id="AdH-uS-JiU"/>
+                                    <constraint firstItem="K8Q-Mu-7s5" firstAttribute="centerX" secondItem="mrj-Ea-6mU" secondAttribute="centerX" id="FW4-hp-mzy"/>
+                                    <constraint firstItem="gsa-LB-wWa" firstAttribute="width" secondItem="81b-ae-AwC" secondAttribute="width" id="LDb-Cj-gEv"/>
+                                    <constraint firstItem="4eO-5c-0aW" firstAttribute="top" secondItem="mrj-Ea-6mU" secondAttribute="top" id="QDW-N8-xFY"/>
+                                    <constraint firstItem="gsa-LB-wWa" firstAttribute="top" secondItem="81b-ae-AwC" secondAttribute="top" id="XCi-wM-JPu"/>
+                                    <constraint firstItem="4eO-5c-0aW" firstAttribute="bottom" secondItem="mrj-Ea-6mU" secondAttribute="bottom" id="osK-h7-1CT"/>
+                                    <constraint firstItem="4eO-5c-0aW" firstAttribute="trailing" secondItem="mrj-Ea-6mU" secondAttribute="trailing" id="r2E-Zr-kfY"/>
                                 </constraints>
-                            </imageView>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="4Bu-Do-OPm" firstAttribute="leading" secondItem="ARY-4Q-ovM" secondAttribute="leading" id="3TA-VX-FL6"/>
-                            <constraint firstAttribute="trailing" secondItem="x2V-RW-djC" secondAttribute="trailing" id="7xK-TX-FSt"/>
-                            <constraint firstItem="4Bu-Do-OPm" firstAttribute="top" secondItem="x2V-RW-djC" secondAttribute="bottom" id="GfP-if-o64"/>
-                            <constraint firstItem="ARY-4Q-ovM" firstAttribute="top" secondItem="x2V-RW-djC" secondAttribute="bottom" id="HpN-ME-TvY"/>
-                            <constraint firstAttribute="trailing" secondItem="4Bu-Do-OPm" secondAttribute="trailing" id="L0t-ss-e0F"/>
-                            <constraint firstItem="x2V-RW-djC" firstAttribute="leading" secondItem="ARY-4Q-ovM" secondAttribute="leading" id="LNP-jK-DuP"/>
-                            <constraint firstItem="ARY-4Q-ovM" firstAttribute="trailing" secondItem="Tz2-Fc-Dfw" secondAttribute="trailing" constant="20" id="OlS-ba-oAr"/>
-                            <constraint firstItem="IGG-C5-3Qq" firstAttribute="centerX" secondItem="ARY-4Q-ovM" secondAttribute="centerX" id="TDM-zA-aQO"/>
-                            <constraint firstItem="x2V-RW-djC" firstAttribute="top" secondItem="nb6-GA-DuK" secondAttribute="top" id="cPy-an-BUp"/>
-                            <constraint firstItem="ARY-4Q-ovM" firstAttribute="bottom" secondItem="Tz2-Fc-Dfw" secondAttribute="bottom" constant="20" id="cQn-zh-jFU"/>
-                            <constraint firstItem="Tz2-Fc-Dfw" firstAttribute="leading" secondItem="ARY-4Q-ovM" secondAttribute="leading" constant="20" id="spJ-CM-Wl5"/>
-                            <constraint firstItem="IGG-C5-3Qq" firstAttribute="centerY" secondItem="ARY-4Q-ovM" secondAttribute="centerY" id="uUU-bz-40C"/>
+                            <constraint firstItem="GSa-Tr-N9r" firstAttribute="leading" secondItem="j1T-YJ-WaK" secondAttribute="leading" id="0ZF-Ci-L8r"/>
+                            <constraint firstItem="81b-ae-AwC" firstAttribute="top" secondItem="GSa-Tr-N9r" secondAttribute="bottom" id="0sB-td-hae"/>
+                            <constraint firstAttribute="trailing" secondItem="81b-ae-AwC" secondAttribute="trailing" id="MoM-EJ-XKV"/>
+                            <constraint firstItem="81b-ae-AwC" firstAttribute="leading" secondItem="k62-1Q-u2f" secondAttribute="leading" id="V0b-Pj-m0K"/>
+                            <constraint firstAttribute="trailing" secondItem="GSa-Tr-N9r" secondAttribute="trailing" id="hfW-ys-Ngw"/>
+                            <constraint firstItem="j1T-YJ-WaK" firstAttribute="bottom" secondItem="81b-ae-AwC" secondAttribute="bottom" id="s42-8d-jg5"/>
+                            <constraint firstItem="GSa-Tr-N9r" firstAttribute="top" secondItem="k62-1Q-u2f" secondAttribute="top" id="sTM-B2-Sr0"/>
+                            <constraint firstItem="j1T-YJ-WaK" firstAttribute="top" secondItem="GSa-Tr-N9r" secondAttribute="bottom" id="tjY-Dz-Zq9"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="ARY-4Q-ovM"/>
+                        <viewLayoutGuide key="safeArea" id="j1T-YJ-WaK"/>
                     </view>
                     <connections>
-                        <outlet property="btn_addCloset" destination="Mza-oH-XLd" id="2xa-GL-XeP"/>
-                        <outlet property="lb_title" destination="IGG-C5-3Qq" id="zsd-ub-Dxz"/>
+                        <outlet property="btn_chooseCloset" destination="4eO-5c-0aW" id="z3p-f3-05e"/>
+                        <outlet property="imgv_addCloset" destination="K8Q-Mu-7s5" id="e8r-JK-t4Y"/>
+                        <outlet property="imgv_closet" destination="mrj-Ea-6mU" id="NwZ-Mo-a1A"/>
+                        <outlet property="sv_container" destination="81b-ae-AwC" id="p2j-G4-Pa3"/>
+                        <outlet property="v_brand" destination="usz-L0-gwr" id="QSl-oM-bKJ"/>
+                        <outlet property="v_place" destination="sMS-wA-eN1" id="ma5-nw-CSz"/>
+                        <outlet property="v_price" destination="luY-U5-WgG" id="rPT-Es-jUd"/>
+                        <outlet property="v_seperator" destination="C8l-2Q-TpB" id="QM2-Je-UqN"/>
+                        <outlet property="v_size" destination="qcB-xP-oho" id="eju-Uh-Zch"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="s1C-mO-Fpd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vdg-E1-6Hc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="47" y="66"/>
         </scene>
